# blesong-tauri

./: .gitignore
.claude/: settings.json
.github/workflows/: build-ubuntu.yml
blesong-angular/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
blesong-angular/src/: index.html
blesong-angular/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
blesong-angular/src/app/directives/: back-button.directive.ts
blesong-angular/src/app/models/: autor.model.ts  bible_bible.model.ts  bible_book.model.ts  bible_books_reference.model.ts  bible_verse.model.ts  order.model.ts  realtime.model.ts  song.model.ts  template.model.ts  upload_file.model.ts
blesong-angular/src/app/pipes/: capitalize.pipe.ts  encapsulation-html.pipe.ts  format.pipe.ts  thousand-separator.pipe.ts  time-ago.pipe.ts
blesong-angular/src/app/services/: autor.service.ts  bible_bible.service.ts  library.service.ts  mqtt.service.ts  navigation.service.ts  server.service.ts  song.service.ts
blesong-angular/src/assets/css/: custom.css  slide.css  theme.min.css
blesong-angular/src/environments/: environment.prod.ts  environment.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  helpers.rs  lib.rs  main.rs  routes_autor.rs  routes_bible.rs  routes_server.rs  routes_song.rs
src-tauri/www/browser/: index.html  main-QNHVAWFP.js
src-tauri/www/browser/assets/json/: particles.json
src-tauri/www/browser/assets/libs/datatables.net-responsive-bs5/js/: responsive.bootstrap5.min.js
(+71 files in other folders)
