[package]
name = "blesong"
version = "1.0.0"
description = "Blesong - Desktop Application"
authors = ["Brainglab"]
edition = "2021"

[lib]
name = "blesong_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v5"] }
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = "0.6"
rumqttd = "0.19"
dirs = "5"
http = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
